--- a/style.css
+++ b/style.css
@@ -26,11 +26,10 @@ body{
 }
 
 header{
-    position: fixed;
+    position:absolute;
     top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
+    left: 15%;
+    z-index: 1000000000;
 
     border-radius: 0 0 5px 5px;
     border: 1rem solid rgba(255, 255,255, 0.1);
@@ -116,15 +115,13 @@ main{
     align-items: center;
     justify-content: center;
 
-    border-radius: 15px;
+    border-radius: 10px 10px 0 0;
     box-shadow: 0 0 10px 5px rgba(0,0,0,0.2);
-
 }
 
 .card img{
     width: 100%;
     height: 100%;
-    border-radius: 10px 10px 0 0;
 
     object-fit: fill;
 }
@@ -210,3 +207,27 @@ main{
     gap: 15px
 }
 
+.rlt{
+    position: relative;
+}
+
+.cart{
+    position: absolute;
+
+    width: 480px;
+
+    top: 50px;
+    left: 40%;
+
+    
+    z-index: 1000000;
+    background-color: #fff;
+
+    border: .5px solid #333;
+
+}
+
+.btn-exit{
+    background-color: #fff;
+    font-size: 26px;
+}
