--- a/style.css
+++ b/style.css
@@ -216,18 +216,57 @@ main{
 
     width: 480px;
 
-    top: 50px;
-    left: 40%;
-
+    right: 50px;
     
     z-index: 1000000;
     background-color: #fff;
+    border-radius: 10px;
 
-    border: .5px solid #333;
-
+    display: none;
 }
 
 .btn-exit{
     background-color: #fff;
     font-size: 26px;
+}
+
+
+.cart-icon{
+    position: fixed;
+    
+    top: 200px;
+    left: 90%;
+    z-index: 100;
+
+    background-color: #d3d3d3;
+
+    width: 50px;
+    height: 40px;
+    border-radius: 10% ;
+
+    cursor: pointer;
+
+}
+
+.cart-icon:hover .cart{
+    display: block;
+}
+
+.material-icons{
+    position: absolute;
+    left: 25%;
+    top: 20%;
+    font-size: 24px;
+
+}
+
+#count{
+    color: red;
+    font-size: 20px;
+    font-weight: 700;
+
+    position: absolute;
+    right: 10%;
+    bottom: 0;
+
 }
