--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ header{
 main{
     display: flex;
     width: 80%;
-    margin: 0 auto;
-    /*box-shadow: 0 0 10px 5px rgba(0,0,0,0.1); */
+    margin: 0 auto 2rem auto;
+    
 }
 
 
@@ -61,7 +61,6 @@ main{
 
 .body-left{
     flex: 3;
-    padding-left: 1rem;
 }
 
 .content-items{
@@ -157,13 +156,16 @@ main{
 
 
 /* ---------------------------CART------------------------ */
+#cart-form{
+    flex: 1.5;
+}
+
 .body-right{
     
     display: flex;
     flex-direction: column;
 
     gap: 1rem;
-    flex: 1.5;
 }
 
 .cart-info{
@@ -189,12 +191,9 @@ main{
 .cart-item-left{
     display: flex;
     gap: .5rem;
-    justify-content: center;
 }
 
 .cart-item-left .item-stt{
-    padding-left: .35rem;
-
     width: 18px;
     height: 18px;
 
@@ -203,7 +202,10 @@ main{
 
     border-radius: 50%;
     background-color: var(--orange);
+
     color: white;
+    text-align: center;
+    font-size: 1rem;
 }
 
 
@@ -230,11 +232,13 @@ main{
 }
 
 .total-price{
+    border-bottom: .1rem solid var(--orange);
+    
     border-radius: .1rem; 
-    color: #fff; 
     padding: .3rem; 
-    background-color: var(--orange); 
-    text-align: center; 
+    
+    color: #000000; 
+     
     font-size:18px; 
     font-weight: bold;
 }
@@ -267,11 +271,10 @@ main{
     color: var(--text-color);
     position: absolute;
     z-index: 1;
-
 }
 
 span.typing {
-    font-size: smaller;
+    font-size: .8rem;
     top: 0;
     left: 0;
 }
@@ -279,6 +282,7 @@ span.typing {
 
 .cart-bill-input input{
     font-size: .7rem;
+    
     padding: .5rem;
     margin-top: .5rem;
 
@@ -287,6 +291,7 @@ span.typing {
     z-index: 2;
 
     background: transparent;
+    width: 100%;
 }
 
 
@@ -303,18 +308,22 @@ span.typing {
     
 }
 
+.btn-delete{
+    background: none;
+    color: red;
+    font-weight: bold;
+    cursor: pointer;
+}
 
 /*===================alert=================== */
 .alert{
     position: fixed;
-    top: calc(50% - 100px);
-    left: calc(50% - 200px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-    width: 200px;
-    height: 100px;
-
-    min-width: 30%;
-    min-height: 10%;
+    width: 270px;
+    height: 150px;
    
     background-color: #fff;
     box-shadow: 0 0 10px 5px rgba(0,0,0,0.3);
@@ -325,38 +334,262 @@ span.typing {
     
 }
 
-.alert button{
-    width: 1rem;
-    height: 1rem;
+.alert-tittle{
+    position: absolute;
+    top: 15%;
+    left: 50%;
 
-    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bolder;
+}
+
+.alert button{
+    width: 50%;
+    height: 20%;
+
+    border-radius: 5px;
     background-color: var(--orange);
     color: #fff;
 
     position: absolute;
-    top: .5rem;
-    right: .5rem;
+    bottom: .5rem;
+    left: 50%;
+    transform: translate(-50%, -10%);
 
     cursor: pointer;
 }
 
 .alert .alert-content{
     position: absolute;
-    top: 1.8rem;
-    left: .3rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-    width: 100%;
-
+    
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    font-size: .9rem;
+    font-size: .8rem;
 }
 
 .alert.active{
     display: block;
 }
 
+.icon-cart{
+    
+    position: fixed;
+    bottom: calc(15% - 60px);
+    left: calc(95% - 60px);
+
+    width: 60px;
+    height: 60px;
+
+    border-radius: .5rem;
+    background-color: var(--orange);
+
+    text-align: center;
+    align-items: center;
+
+    display: none;
+    z-index: 10;
+}
+
+.icon-cart button{
+    background-color: transparent;
+    color: var(--white);
+}
+
+.hiden{
+    display: none;
+}
+
+.active{
+    display: block;
+}
+
+
+.btn-close-cart{
+    width: 2rem;
+    height: 2rem;
+
+    border-radius: 50%;
+    color: #fff;
+    background-color: var(--orange);
+
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    display: none;
+}
+
+
 /* ========================= MOBILE ===================== */
 
+@media screen and (max-width: 1023px){
+
+    /*============ cart form ==========*/
+    .body-right{
+        background-color: #fffcfc;
+
+        width: 80%;
+       
+        padding: .5rem;
+        
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        box-shadow: 0 0 10px 5px rgba(0,0,0,0.3);
+        border-radius: .3rem;
+        
+    }
+
+    #cart-form{
+        position: fixed;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+        
+        background-color: rgba(0,0,0,0.4);
+        z-index: 11;
+
+        display: none;
+        overflow: auto;
+    }
+
+    .btn-close-cart{
+        display: block;
+    }
+
+    .icon-cart{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+    }
+    
+}
+
+
+@media screen and (max-width: 426px) {
+     /* ======= item ======= */
+     .content-item .item-list{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .item-list .card{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        box-shadow: none;
+        border-radius: 0;
+
+        min-width: none;
+        min-height: none;
+
+        width: 100%;
+
+        border-bottom: 1px solid #bebebe;
+    }
+
+   .card:last-child{
+        border: none;
+   }
+
+    .card img{
+        width: 50%;
+        object-fit: fill;
+    }
+
+    .card .card-info{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+
+    .card .card-info button{
+        margin: .5rem .5rem;
+        border-radius: 5px;
+
+        font-size: .8rem;
+        color: #eee7e7;
+
+        width: 50%;
+        height: 30px;
+
+        background-color: var(--orange);
+        cursor: pointer;
+    }
+
+    .card-info button span{
+        font-size: .8rem;
+        color: #eee7e7;
+        padding: .1rem;
+    }
+
+    /*===== cart form */
+    
+    .cart-item-left .item-stt{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        width: 15px;
+        height: 15px;
+    
+        min-width: none;
+        min-height: none;
+    }
+
+    .item-name, .item-price{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        font-size: .8rem;
+    }
+    
+    
+    .cart-item-right .item-count{
+        display: flex;
+        justify-content: center;
+        align-items: center
+        ;
+        gap: .3rem;
+    }
+
+    .item-stt, .item-count{
+        font-size: .7rem;
+    }
+
+    .total-price{
+        font-size: .9rem;
+    }
+
+    .cart-bill-input span{
+        margin: 0 0 0 .5rem;
+        color: var(--text-color);
+
+        position: absolute;
+        
+        z-index: 1;
+        font-size: .7rem;
+    }
+
+    span.typing {
+        font-size: .6rem;
+        top: 0;
+        left: 0;
+    }
+
+}
